# SaleSpeak

./: .gitignore  README.md  config.yaml  log.txt  pyproject.toml  requirements.txt  schema.sql  start.py
app/: Config.py  http_exception.py  logging.py  main.py  oauth.py
app/auth/: secret_token.py
app/core/: app_configure.py  events.py
app/core/assistant/: voice_assistant.py
app/core/common/: llm_service.py
app/core/modules/adapters/: audio_interface.py  audio_utils.py  stt.py  tts.py  tts_adapter.py  tts_utils.py  vad.py  voice_assistant.py
app/core/modules/llm/: enhanced_processor.py  language_processor.py  language_utils.py  processor.py  prompts.py
app/core/modules/multilingual/: miltilingual.py
app/core/modules/web_scraper/: config.py  query_processor.py  searcher.py  service.py  web_scraper.py
app/database/: __init__.py
app/database/connections/: db_abs.py  supabase.py
app/database/models/: config.py  entity.py  get_config.py  roles.py  token.py  user.py
app/database/repositories/: roles.py  session_repository.py  token.py  user.py
app/database/repositories/crud/: base.py  base_supabase_crud.py  list.py
app/helper/: config.py  get_config.py
app/routes/api/: routers.py
app/routes/api/v1/: auth.py  roles.py  user.py  voice_assistant.py
app/schema/: enums.py  health.py  password.py  token.py
app/utils/: hashing.py  helper.py  logging.py  uptime.py
frontend/: package-lock.json  package.json
frontend/app/chat/: page.tsx
frontend/components/: message-bubble.tsx
frontend/services/: custom-voice-api.ts
